--- a/src/styles/printStyle.css
+++ b/src/styles/printStyle.css
@@ -21,10 +21,6 @@
     padding: 0;
   }
 
-  .form-header {
-    width: 100%;
-    background-color: white; /* 确保背景不透明 */
-  }
   * {
     page-break-before: auto;
     page-break-inside: auto;
@@ -59,12 +55,6 @@
 /* @page :left 
   @page :right  */
 
-.text {
-  font-size: 24px;
-  font-weight: bold;
-  color: red;
-}
-
 .textarea {
   width: 100%;
   /* font-family: "Microsoft YaHei"; */
@@ -73,15 +63,6 @@
 }
 .print-dialog .print-container .form-template:not(:first-child) {
   margin-top: 100px;
-}
-.form-header {
-  color: #323232;
-  text-align: center;
-  font-size: 24px;
-  font-weight: 500;
-  padding: 10px 0;
-  background: #f9f9f9;
-  margin-bottom: 10mm;
 }
 @keyframes window-open {
   0% {
@@ -139,4 +120,32 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+//new
+.form-section {
+  width: 100%;
+  font-size: 6mm;
+}
+.form-table {
+}
+.form-header {
+  width: 100%;
+  height: 14mm;
+  color: #323232;
+  font-size: 6mm;
+  font-weight: 600;
+  background: #f9f9f9;
+  margin-bottom: 8mm;
+  position: relative;
+}
+.form-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.form-tbody {
+  font-size: 4mm;
 }
