--- a/src/styles/printStyle.css
+++ b/src/styles/printStyle.css
@@ -1,8 +1,10 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: unset;
+  padding: unset;
 }
-
+body {
+  background: gray;
+}
 .print-container {
   /* width: 210mm; */
   width: 794px;
@@ -95,7 +97,7 @@
   margin: 20px auto;
   padding: 20px;
   border: 1px solid #888;
-  width: calc(210mm + 4px);
+  width: calc(794px + 4px);
   /* height: 20%; */
   position: relative;
   display: flex;
@@ -124,19 +126,38 @@
 
 //new
 .form-section {
+  background: white;
   width: 100%;
-  font-size: 6mm;
+  font-size: 16px;
+}
+.form-container {
+  background: white;
+  width: 794px;
+  height: 1123px;
+  box-sizing: border-box;
+  position: relative;
+}
+.form-container:not(:last-child)::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: lightblue;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='gray' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
 }
 .form-table {
 }
 .form-header {
   width: 100%;
-  height: 14mm;
+  height: 50px;
   color: #323232;
-  font-size: 6mm;
+  font-size: 20px;
   font-weight: 600;
   background: #f9f9f9;
-  margin-bottom: 8mm;
+  margin-bottom: 20px;
   position: relative;
 }
 .form-title {
@@ -147,5 +168,11 @@
 }
 
 .form-tbody {
-  font-size: 4mm;
+  font-size: 16px;
+}
+.form-tbody td {
+  line-height: 20px;
+  font-size: 16px;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
