--- a/src/styles/printStyle.css
+++ b/src/styles/printStyle.css
@@ -149,19 +149,12 @@ body {
 }
 .form-header {
   width: 100%;
-  height: 50px;
   color: #323232;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 600;
   background: #f9f9f9;
   margin-bottom: 20px;
-  position: relative;
-}
-.form-title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  padding: 10px 0;
 }
 
 .form-tbody {
