--- a/src/styles/printStyle.css
+++ b/src/styles/printStyle.css
@@ -137,13 +137,17 @@ body {
   box-sizing: border-box;
   position: relative;
 }
-.form-container:not(:last-child) .dashed-line {
+/* .form-container:not(:last-child) .dashed-line */
+.form-section .form-container .dashed-line {
   width: 100%;
   height: 1px;
   position: absolute;
   bottom: 0;
   left: 0;
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='gray' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+}
+.form-section:last-child .form-container:last-child .dashed-line {
+  display: none;
 }
 .form-table {
 }
